--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,7 @@ body {
     }
     #menu-lg img:hover{
         transform: scale(5deg);
+        transition: 3s;
         scale: 1.1;
         transition: 0,5s;
     }
